add production mode

--- a/package.json
+++ b/package.json
@@ -6,12 +6,24 @@
   "type": "module",
   "scripts": {
     "dev": "node index.js",
+    "start": "node index.js",
+    "start:prod": "NODE_ENV=production node index.js",
+    "pm2:start": "pm2 start ecosystem.config.js --env production",
+    "pm2:stop": "pm2 stop ecosystem.config.js",
+    "pm2:restart": "pm2 restart ecosystem.config.js",
+    "pm2:delete": "pm2 delete ecosystem.config.js",
+    "pm2:logs": "pm2 logs",
+    "pm2:monit": "pm2 monit",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
+    "db:migrate:deploy": "prisma migrate deploy",
     "db:studio": "prisma studio",
     "db:seed": "node prisma/seed.js",
-    "test": "node test-api.js"
+    "db:reset": "prisma migrate reset",
+    "test": "node test-api.js",
+    "build": "prisma generate",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
@@ -24,5 +36,9 @@
   },
   "devDependencies": {
     "prisma": "^5.7.1"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
