--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "dev": "node index.js",
     "start": "node index.js",
     "start:prod": "NODE_ENV=production node index.js",
-    "pm2:start": "pm2 start ecosystem.config.js --env production",
-    "pm2:stop": "pm2 stop ecosystem.config.js",
-    "pm2:restart": "pm2 restart ecosystem.config.js",
-    "pm2:delete": "pm2 delete ecosystem.config.js",
+    "pm2:start": "pm2 start ecosystem.config.cjs --env production",
+    "pm2:stop": "pm2 stop ecosystem.config.cjs",
+    "pm2:restart": "pm2 restart ecosystem.config.cjs",
+    "pm2:delete": "pm2 delete ecosystem.config.cjs",
     "pm2:logs": "pm2 logs",
     "pm2:monit": "pm2 monit",
     "db:generate": "prisma generate",
